Fixed footer overlap
Made sure the footer doesn't overlap the page content any more

--- a/src/App.css
+++ b/src/App.css
@@ -95,6 +95,7 @@
   padding-top: 4.5rem;
   position: relative;
   min-height: 100%;
+  padding-bottom: 3rem;
 }
 
 *,
